@@ -1,3 +1,7 @@
+2007-09-10  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Use native scrollbars on Aqua and avoid ttk ones. 
+
 2007-09-09  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl:          Added support for checking RSS/ATOM feeds
